--- a/src/Shadow.css
+++ b/src/Shadow.css
@@ -4,11 +4,12 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+  position: absolute;
 }
 
 .box-holder {
-  width: 50vw;
-  height: 50vh;
+  width: 45vw;
+  height: 45vh;
   display: flex;
 }
 
